@@ -87,6 +87,8 @@ Fixes
   * Fixed warn about missing cython package in dev builds
   * Fix align.rotation_matrix checks array shape equality (Issue #1152)
   * Fixed strange error when writing a PDB with 0 atoms (Issue #1083 PR #1103)
+  * Fixed selections using operators backwards ('prop 10 > mass') and sensitivity
+    about whitespace around these (PR #1156 Issue #1011 #1009)
 
 Changes
   * Started unifying the API of analysis classes (named internally
